# SDL3Game

./: CMakeLists.txt  SDL3Game.sln  resources.rc  version.h  Текстовый документ.txt
SDL3Game/: BaseSprite.cpp  BaseSprite.h  Player.cpp  Player.h  SDL3Game.vcxproj  SDL3Game.vcxproj.filters  Sprite.cpp  Sprite.h  SwitchSceneFabric.cpp  SwitchSceneFabric.h  TextRect.cpp  TextRect.h  Timer.h  global_functions.cpp  global_functions.h  global_options.h  global_variables.h  main.cpp  resource.h  save&load_update.py  save_and_load.cpp  save_and_load.h  timer.cpp
SDL3Game/Scenes/: BaseScene.cpp  BaseScene.h  ExampleScene  SceneGameStart.cpp  SceneGameStart.h  SceneMainMenu.cpp  SceneMainMenu.h  UIMenuButtons.cpp  UIMenuButtons.h
SDL3Game/Scenes/SceneMainMenu/: SceneLoad.cpp  SceneOptions.cpp  UIbuttons.cpp
SDL3Game/Scenes/SceneMainMenu/SceneLoad/: UIButtons.cpp
SDL3Game/Scenes/SceneMainMenu/SceneOptions/: UIbuttons.cpp
SDL3Game/Scenes/SceneMainMenu_obj/: UIbuttons.cpp
SDL3Game/Scenes/headers/: BaseScene.h  SceneGameStart.h  SceneMainMenu.h
SDL3Game/Scenes/src/: BaseScene.cpp  SceneGameStart.cpp  SceneMainMenu.cpp
SDL3Game/Sprites/: BaseSprite.cpp  BaseSprite.h  BaseSpriteGroup.cpp  BaseSpriteGroup.h  BaseSpriteInterface.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  SpriteSmoothMove.cpp  SpriteSmoothMove.h  SpriteWithAnimation.cpp  SpriteWithAnimation.h  TextRect.cpp  TextRect.h  TextRectWithShadow.cpp  TextRectWithShadow.h
SDL3Game/Sprites/AnimationClass/: AnimationByAtlas.cpp  AnimationByAtlas.h  AnimationByFile.cpp  AnimationByFile.h  BaseAnimation.cpp  BaseAnimation.h
SDL3Game/Sprites/TextClass/: BaseTextEffect.cpp  BaseTextEffect.h  TextEffectTeletype.cpp  TextEffectTeletype.h  TextRect.cpp  TextRect.h  TextRectWithShadow.cpp  TextRectWithShadow.h
SDL3Game/lang/en/dialogs/: home.json
